--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,9 @@ dependencies = [
     "pydantic-settings (>=2.10.1,<3.0.0)",
     "ollama (>=0.5.4,<0.6.0)",
     "praw (>=7.8.1,<8.0.0)",
-    "tweepy (>=4.16.0,<5.0.0)"
+    "tweepy (>=4.16.0,<5.0.0)",
+    "fastapi (>=0.118.1,<0.119.0)",
+    "uvicorn (>=0.37.0,<0.38.0)"
 ]
 
 
