--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,10 @@ dependencies = [
     "praw (>=7.8.1,<8.0.0)",
     "tweepy (>=4.16.0,<5.0.0)",
     "fastapi (>=0.118.1,<0.119.0)",
-    "uvicorn (>=0.37.0,<0.38.0)"
+    "uvicorn (>=0.37.0,<0.38.0)",
+    "sqlalchemy (>=2.0.43,<3.0.0)",
+    "alembic (>=1.16.5,<2.0.0)",
+    "psycopg2-binary (>=2.9.11,<3.0.0)",
 ]
 
 
