--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,6 @@ requires-python = "^3.11"
 dependencies = [
     "pydantic (>=2.11.9,<3.0.0)",
     "pydantic-settings (>=2.10.1,<3.0.0)",
-    "ollama (>=0.5.4,<0.6.0)",
     "praw (>=7.8.1,<8.0.0)",
     "tweepy (>=4.16.0,<5.0.0)",
     "fastapi (>=0.118.1,<0.119.0)",
@@ -18,6 +17,7 @@ dependencies = [
     "sqlalchemy (>=2.0.43,<3.0.0)",
     "alembic (>=1.16.5,<2.0.0)",
     "psycopg2-binary (>=2.9.11,<3.0.0)",
+    "google-genai (>=1.44.0,<2.0.0)",
 ]
 
 
